k8s/deploy-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docentre-backend-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docentre-backend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  
  template:
    metadata:
      labels:
        app: docentre-backend
    spec:
      containers:
        - name: docentre-backend-container
          image: ghcr.io/docentre/docentre-backend:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
            limits:
              cpu: 200m
              memory: 200Mi
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
