k8s/deploys.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docentre-frontend-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docentre-frontend
  template:
    metadata:
      labels:
        app: docentre-frontend
    spec:
      containers:
        - name: docentre-frontend-container
          image: ghcr.io/docentre/docentre-frontend:latest
          ports:
            - containerPort: 5173
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
            limits:
              cpu: 1000m
              memory: 1000Mi
          livenessProbe:
            tcpSocket:
              port: 5173
            initialDelaySeconds: 15
            periodSeconds: 20
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docentre-frontend-oauth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docentre-oauth
  template:
    metadata:
      labels:
        app: docentre-oauth
    spec:
      containers:
        - name: docentre-oauth-container
          image: ghcr.io/docentre/docentre-oauth:latest
          ports:
            - containerPort: 5273
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
            limits:
              cpu: 200m
              memory: 200Mi
          livenessProbe:
            tcpSocket:
              port: 5273
            initialDelaySeconds: 15
            periodSeconds: 20
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docentre-backend-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docentre-backend
  template:
    metadata:
      labels:
        app: docentre-backend
    spec:
      containers:
        - name: docentre-backend-container
          image: ghcr.io/docentre/docentre-backend:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
            limits:
              cpu: 200m
              memory: 200Mi
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
          livenessProbe:
            tcpSocket:
              port: 3306
            initialDelaySeconds: 15
            periodSeconds: 10

      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pvc
