k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docentre-app-ingress
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: docentre-app-clusterip 
                port:
                  number: 8080
          # - path: /view
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: docentre-ui-clusterip 
          #       port:
          #         number: 3000
